@@ -1,3 +1,9 @@
+2006-12-18  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Add files from libgswitchit and libslab
+	* POTFILES.skip: Remove non-existing file.
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-12-18  Ankit Patel  <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
